// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationButton renders changes state on clicks and finally calls the onConfirmed prop 1`] = `
<div>
  <button
    class="sc-kAzzGY byxJzA"
    data-testid="confirmation-button-initial"
  >
    <i
      class="sc-chPdSV jGSntg sl-minus-circle"
    />
  </button>
</div>
`;

exports[`ConfirmationButton renders changes state on clicks and finally calls the onConfirmed prop 2`] = `
<div>
  <span>
    <button
      class="sc-kAzzGY byxJzA"
      data-testid="confirmation-button-confirm"
    >
      <i
        class="sc-kgoBCf fSpoUX sl-arrow-circle-right"
      />
    </button>
    <button
      class="sc-kAzzGY byxJzA"
      data-testid="confirmation-button-cancel"
    >
      <i
        class="sc-kGXeez inDZzG sl-delete-circle"
      />
    </button>
  </span>
</div>
`;

exports[`ConfirmationButton renders changes state on clicks and finally calls the onConfirmed prop 3`] = `
<div>
  <button
    class="sc-kAzzGY byxJzA"
    data-testid="confirmation-button-initial"
  >
    <i
      class="sc-kpOJdX dxYPIN sl-minus-circle"
    />
  </button>
</div>
`;

exports[`ConfirmationButton renders changes state on clicks and finally calls the onConfirmed prop 4`] = `
<div>
  <button
    class="sc-kAzzGY byxJzA"
    data-testid="confirmation-button-initial"
  >
    <i
      class="sc-jKJlTe eNZmHS sl-minus-circle"
    />
  </button>
</div>
`;
